Seller Dashboard added

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,4 +6,5 @@
     </style>
 
     <style name="Theme.DigiDokan" parent="Base.Theme.DigiDokan" />
+    <style name="Theme.DigiDokan.App.Bar" parent="Theme.Material3.DayNight" />
 </resources>
