status bar overlap fix

--- a/app/src/main/res/layout/activity_seller_dashboard.xml
+++ b/app/src/main/res/layout/activity_seller_dashboard.xml
@@ -5,6 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     tools:context=".views.dashboard.seller.SellerDashboard">
 
     <fragment
@@ -13,10 +14,10 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:defaultNavHost="true"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:navGraph="@navigation/seller_nav" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
