--- a/app/src/main/res/layout/fragment_my_product.xml
+++ b/app/src/main/res/layout/fragment_my_product.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#D8E66A"
     tools:context=".views.dashboard.seller.products.MyProductFragment">
 
     <!-- TODO: Update blank fragment layout -->
